[gd_scene load_steps=6 format=3 uid="uid://cgawhqtm2d0oc"]

[ext_resource type="Script" uid="uid://cjyw8ygnvjetv" path="res://scenes/info.gd" id="1_kin2u"]
[ext_resource type="Texture2D" uid="uid://bjaa25anuibvf" path="res://assets/tilemap/07 Border 01.png" id="2_3wikv"]
[ext_resource type="Texture2D" uid="uid://8urk3op5sqg8" path="res://assets/info/fishing_enemies.png" id="2_kin2u"]
[ext_resource type="Texture2D" uid="uid://3c66n8i31b63" path="res://assets/info/right_arrow.png" id="4_3wikv"]

[sub_resource type="AtlasTexture" id="AtlasTexture_c0a5a"]
atlas = ExtResource("2_3wikv")
region = Rect2(64, 64, 64, 64)

[node name="Info" type="Node2D"]
script = ExtResource("1_kin2u")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(8, 8)
texture = SubResource("AtlasTexture_c0a5a")

[node name="PictureSprite" type="Sprite2D" parent="."]
position = Vector2(3, -87)
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_kin2u")

[node name="Description" type="RichTextLabel" parent="PictureSprite"]
offset_left = -342.0
offset_top = 174.0
offset_right = 1.0
offset_bottom = 274.0
scale = Vector2(2, 2)

[node name="RightButton" type="TextureButton" parent="."]
offset_left = -31.0
offset_top = 117.0
offset_bottom = 148.0
scale = Vector2(2, 2)
texture_normal = ExtResource("4_3wikv")

[connection signal="pressed" from="RightButton" to="." method="_on_right_button_pressed"]
